Added app option to just record video and upload

--- a/BarcodeApp/res/values/strings.xml
+++ b/BarcodeApp/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
 
     <string name="app_name">BarcodeApp</string>
-    <string name="Login">Log in</string>
+    <string name="Login">Log in and decode locally</string>
+    <string name="backgroundVideo">Log in and upload video</string>
     <string name="Logout">Log out</string>
     <string name="account">Account</string>
     <string name="unrecoverable_error">Unrecoverable Play Services error</string>
